# real-time-systems

./: README.md
pratica01/blink_led/: CMakeLists.txt  blink_led_pico.c
pratica02/: CMakeLists.txt  main.c
pratica03/: CMakeLists.txt  main.c
pratica04/: CMakeLists.txt  main.c
pratica05/: CMakeLists.txt  main.c
pratica06/: CMakeLists.txt  main.c
pratica07/: CMakeLists.txt  heap_4.c  main.c
